public/style.css
body {
    font-size: 18px;
}

h1 {
    border-bottom: solid 1px #dec027; 
}

h1, h2, h3, h4, h5, h6 {
    margin-bottom: 15px;
}

.hidden {
    display: none;
}

.editor-pane {
    width: 100%;
    height: 250px;
    border: solid 1px black;
}

.run-btn  {
    display: block;
}

.output-area {
    width: 100%;
    max-height: 300px;
    resize: none;
    font-family: 'Courier New', Courier, monospace;
    overflow-y: scroll;
    border: 1px solid #D3D3D3;
}

.output-line {
    display: block;
    padding-left: 10px;
    padding-right: 10px;
}

.output-label {
    font-weight: bold;
}

.output-pass {
    background-color: rgb(237, 247, 231)
}

.output-fail {
    background-color: #faecec;
}

.output-error {
    background-color: #faecec;
}

.indicator {
    margin-right: 6px;
    font-size: 18px;
}

.pass-indicator {
    color: green;
}

.fail-indicator {
    color: red;
}

.no-padding {
    padding-right: 0px;
    padding-left: 0px;
}

.note, .tip {
    margin-bottom: 15px;
    border: 1px solid #D3D3D3;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
    font-size: 15px;
}
.note {
    background-color: rgb(253, 242, 229);
}
.tip {
    background-color: rgb(229, 248, 253);
}
.note p:last-child, .tip p:last-child {
    margin-bottom: 0;
}

.sidebar {
    border-right: 1px solid #D3D3D3;
}

.lesson-container {
    margin-left: 0px;
    max-width: 800px;
    margin-bottom: 40px;
}

